# AP-Module-C-Wednesday-Excercises

./: .replit  CMakeLists.txt  Exercise.cpp  Exercise.h  README.md  data.csv  list.csv  main.cpp
Exercise1/: Exercise1.cpp  Exercise1.h
Exercise2/: Exercise2.cpp  Exercise2.h
Exercise3/: Exercise3.cpp  Exercise3.h
Helpers/: iohelper.cpp  iohelper.h  mathshelper.cpp  mathshelper.h
