cmake_minimum_required(VERSION 3.17)
project(AdaAdvancedProgramming_3)

set(CMAKE_CXX_STANDARD 17)

add_executable(AdaAdvancedProgramming_3 main.cpp Helpers/iohelper.cpp Helpers/iohelper.h Exercise.cpp Exercise.h Exercise1/Exercise1.cpp Exercise1/Exercise1.h Exercise2/Exercise2.cpp Exercise2/Exercise2.h Exercise3/Exercise3.cpp Exercise3/Exercise3.h)